--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Mern Stack Project",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "engines": {
+    "node": "14.18.0",
+    "npm": "7.21.1"
+  },
   "keywords": [],
-  "author": "",
+  "author": "Naga Sai .K",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
@@ -17,5 +21,8 @@
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "mongoose": "^6.0.7"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13"
   }
 }
